--- a/index.html
+++ b/index.html
@@ -1,1 +1,168 @@
-Hello
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Video Surveillance for Road Traffic Monitoring - Team 5</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Video Surveillance for Road Traffic Monitoring</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="#banner">Home</a></li>
+											<li><a href="#one" class="more scrolly">Abstract</a></li>
+											<li><a href="#two" class="more scrolly">Videos</a></li>
+											<li><a href="#three" class="more scrolly">Team</a></li>
+											<li><a href="#cta" class="more scrolly">Workshop</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>Video Surveillance for Road Traffic Monitoring</h2>
+							<p>Team 5 - Idoia Ruiz, Roque Rodríguez, Lidia Talavera, Onofre Martorell<br />
+							 Video Analysis (<a href="http://pagines.uab.cat/mcv/content/m4-video-analysis">Master in Computer Vision</a>)</p>
+							<ul class="actions">
+								<li><a href="#" class="button icon special fa-file-pdf-o">Report</a></li>
+								<li><a href="#" class="button icon special fa-github">Code</a></li>
+							</ul>
+							<ul class="icons major">
+								<li><a href="#" class="icon fa-file-pdf-o major style2"><span class="label">Report</span></a></li>
+								<li><a href="https://github.com/mcv-m4-video/mcv-m4-2017-team5" class="icon fa-github major style2"><span class="label">Code</span></a></li>
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">See More</a>
+					</section>
+
+				<!-- Description -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Abstract</h2>
+								<p>Here we will write our report's abstract. <br /> And insert our slides.</p>
+							</header>
+
+						</div>
+					</section>
+
+				<!-- Videos -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/40riCqvRoMs" frameborder="0" allowfullscreen></iframe>
+								</div><div class="content">
+								<h2>Here we'll put any video that we'll make</h2>
+								<p>And its explanation</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/aaqzPMOd_1g" frameborder="0" allowfullscreen></iframe>
+							</div><div class="content">
+								<h2>Another video</h2>
+								<p>Another description.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zLkz6ljKtyw" frameborder="0" allowfullscreen></iframe></div><div class="content">
+								<h2>More</h2>
+								<p>Description.</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>The team</h2>
+								<p>This project has been developed by four students of the Master in Computer Vision of the Universitat Autònoma de Barcelona.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-stethoscope">
+									<h3>Roque Rodríguez</h3>
+									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
+									<a href="https://github.com/RoqueRouteiral" class="icon fa-github"><span class="label">Facebook</span></a>
+								</li>
+								<li class="icon fa-cogs">
+									<h3>Lidia Talavera</h3>
+									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
+									<a href="https://github.com/LidiaTalavera" class="icon fa-github"><span class="label">Facebook</span></a>
+								</li>
+								<li class="icon fa-superscript">
+									<h3>Onofre Martorell</h3>
+									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
+									<a href="https://github.com/OnofreMartorell" class="icon fa-github"><span class="label">Facebook</span></a>
+								</li>
+								<li class="icon fa-flask">
+									<h3>Idoia Ruiz</h3>
+									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
+									<a href="https://github.com/idoiaruiz" class="icon fa-github"><span class="label">Facebook</span></a>
+								</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>4rd Workshop on Road Traffic Monitoring</h2>
+								<p>Here you can check the others teams' work.</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="#" class="button fit">Check it</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="copyright">
+							<li>&copy; Master in Computer Vision Barcelona, 2017</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Background image: <a href="http://unsplash.com">Unsplash</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
