--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/40riCqvRoMs" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/40riCqvRoMs" frameborder="0" allowfullscreen></iframe>
 								</div><div class="content">
 								<h2>Here we'll put any video that we'll make</h2>
 								<p>And its explanation</p>
@@ -81,14 +81,15 @@
 						</section>
 						<section class="spotlight">
 							<div class="image">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/aaqzPMOd_1g" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/aaqzPMOd_1g" frameborder="0" allowfullscreen></iframe>
 							</div><div class="content">
 								<h2>Another video</h2>
 								<p>Another description.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zLkz6ljKtyw" frameborder="0" allowfullscreen></iframe></div><div class="content">
+							<div class="image">
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/zLkz6ljKtyw" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>More</h2>
 								<p>Description.</p>
 							</div>
