--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>4rd Workshop on Road Traffic Monitoring</h2>
+								<h2>4th Workshop on Road Traffic Monitoring</h2>
 								<p>Here you can check the others teams' work.</p>
 							</header>
 							<ul class="actions vertical">
