--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="#banner">Home</a></li>
+											<li><a href="#banner" class="more scrolly">Home</a></li>
 											<li><a href="#one" class="more scrolly">Abstract</a></li>
 											<li><a href="#two" class="more scrolly">Videos</a></li>
 											<li><a href="#three" class="more scrolly">Team</a></li>
@@ -44,15 +44,11 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Video Surveillance for Road Traffic Monitoring</h2>
-							<p>Team 5 - Idoia Ruiz, Roque Rodríguez, Lidia Talavera, Onofre Martorell<br />
-							 Video Analysis (<a href="http://pagines.uab.cat/mcv/content/m4-video-analysis">Master in Computer Vision</a>)</p>
+							<p>Team 5 - Idoia Ruiz, Roque Rodríguez, Lidia Talavera, Onofre Martorell</p>
+							<p>Video Analysis (<a href="http://pagines.uab.cat/mcv/content/m4-video-analysis">Master in Computer Vision</a>)</p>
 							<ul class="actions">
 								<li><a href="#" class="button icon special fa-file-pdf-o">Report</a></li>
-								<li><a href="#" class="button icon special fa-github">Code</a></li>
-							</ul>
-							<ul class="icons major">
-								<li><a href="#" class="icon fa-file-pdf-o major style2"><span class="label">Report</span></a></li>
-								<li><a href="https://github.com/mcv-m4-video/mcv-m4-2017-team5" class="icon fa-github major style2"><span class="label">Code</span></a></li>
+								<li><a href="https://github.com/mcv-m4-video/mcv-m4-2017-team5" class="button icon special fa-github">Code</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">See More</a>
@@ -148,7 +144,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Master in Computer Vision Barcelona, 2017</li>
+							<li> Master in Computer Vision Barcelona, 2017</li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<li>Background image: <a href="http://unsplash.com">Unsplash</a></li>
 						</ul>
