organization page link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<p>Here you can check the others teams' work.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit">Check it</a></li>
+								<li><a href="http://mcv-m4-video.github.io/class2017/" class="button fit">Check it</a></li>
 							</ul>
 						</div>
 					</section>
