--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
 									<a href="https://github.com/OnofreMartorell" class="icon fa-github"><span class="label">Facebook</span></a>
 								</li>
-								<li class="icon fa-flask">
+								<li class="icon fa-magnet">
 									<h3>Idoia Ruiz</h3>
 									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
