--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 							<ul class="actions">
 								<li><a href="#" class="button icon special fa-file-pdf-o">Report</a></li>
 								<li><a href="https://github.com/mcv-m4-video/mcv-m4-2017-team5" class="button icon special fa-github">Code</a></li>
+								<li><a href="#" class="button icon special fa-file-powerpoint-o">Slides</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">See More</a>
@@ -59,7 +60,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Abstract</h2>
-								<p>Here we will write our report's abstract. <br /> And insert our slides.</p>
+								<p>We present a traffic monitoring tool, based on computer vision techniques, which is able to perform vehicle tracking and speed control. It uses background substraction techniques like Gaussian modelling or Stauffer & Grimson, morphological operators and stabilization algorithms to process the video, and advanced tracking methods which use Kalman filtering and mean-shift algorithms.</p>
 							</header>
 
 						</div>
@@ -69,25 +70,25 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image">
-								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/40riCqvRoMs" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/cUy-Clk7238" frameborder="0" allowfullscreen></iframe>
 								</div><div class="content">
-								<h2>Here we'll put any video that we'll make</h2>
-								<p>And its explanation</p>
+								<h2>Demo</h2>
+								<p>This demo shows how vehicle tracking is performed using a test sequence. Background substraction is performed using Stauffer & Grimson model.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image">
-								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/aaqzPMOd_1g" frameborder="0" allowfullscreen></iframe>
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/PxMsU-4Z80w" frameborder="0" allowfullscreen></iframe>
 							</div><div class="content">
-								<h2>Another video</h2>
-								<p>Another description.</p>
+								<h2></h2>
+								<p>In this demo we use Gaussian modelling for the background estimation.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image">
-								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/zLkz6ljKtyw" frameborder="0" allowfullscreen></iframe></div><div class="content">
-								<h2>More</h2>
-								<p>Description.</p>
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/AN5WRHZxTnE" frameborder="0" allowfullscreen></iframe></div><div class="content">
+								<h2>Vehicle tracking in Barcelona</h2>
+								<p>This video corresponds to a road of Barcelona. Background segmentation using Stauffer & Grimson.</p>
 							</div>
 						</section>
 					</section>
@@ -102,25 +103,33 @@
 							<ul class="features">
 								<li class="icon fa-stethoscope">
 									<h3>Roque Rodríguez</h3>
-									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<div class="12u">
+									<span class="image fit"><img src="images/7.jpg" alt=""></span>
+									</div>
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
 									<a href="https://github.com/RoqueRouteiral" class="icon fa-github"><span class="label">Facebook</span></a>
 								</li>
 								<li class="icon fa-cogs">
 									<h3>Lidia Talavera</h3>
-									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<div class="12u">
+									<span class="image fit"><img src="images/5.jpg" alt=""></span>
+								  </div>
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
 									<a href="https://github.com/LidiaTalavera" class="icon fa-github"><span class="label">Facebook</span></a>
 								</li>
 								<li class="icon fa-superscript">
 									<h3>Onofre Martorell</h3>
-									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<div class="12u">
+									<span class="image fit"><img src="images/6.jpg" alt=""></span>
+								  </div>
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
 									<a href="https://github.com/OnofreMartorell" class="icon fa-github"><span class="label">Facebook</span></a>
 								</li>
 								<li class="icon fa-magnet">
 									<h3>Idoia Ruiz</h3>
-									<span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+									<div class="12u">
+									<span class="image fit"><img src="images/1.jpg" alt=""></span>
+									</div>
 									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
 									<a href="https://github.com/idoiaruiz" class="icon fa-github"><span class="label">Facebook</span></a>
 								</li>
