--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="image">
 								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/AN5WRHZxTnE" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>Vehicle tracking in Barcelona</h2>
-								<p>This video corresponds to a road of Barcelona. Background segmentation using Stauffer & Grimson.</p>
+								<p>This video corresponds to a road of Barcelona. <br />Background segmentation using Stauffer & Grimson.</p>
 							</div>
 						</section>
 					</section>
