--- a/index.html
+++ b/index.html
@@ -91,9 +91,18 @@
 								<p>This video corresponds to a road of Barcelona. <br />Background segmentation using Stauffer & Grimson.</p>
 							</div>
 						</section>
+						<section class="spotlight">
+							<div class="image">
+								<iframe width="100%" height="315px" src="https://www.youtube.com/embed/4XXxRbAahhg" frameborder="0" allowfullscreen></iframe></div><div class="content">
+								<h2>Evening vehicle tracking</h2>
+								<p>Our system is also adapted to work at low light conditions.<br />Background segmentation using Stauffer & Grimson.</p>
+							</div>
+						</section>
+
+
 					</section>
 
-				<!-- Three -->
+				<!-- Team -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -137,12 +146,12 @@
 						</div>
 					</section>
 
-				<!-- CTA -->
+				<!-- Workshop -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>4th Workshop on Road Traffic Monitoring</h2>
-								<p>Here you can check the others teams' work.</p>
+								<p>Here you can check others teams' work.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://mcv-m4-video.github.io/class2017/" class="button fit">Check it</a></li>
