--- a/index.html
+++ b/index.html
@@ -115,32 +115,30 @@
 									<div class="12u">
 									<span class="image fit"><img src="images/7.jpg" alt=""></span>
 									</div>
-									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
-									<a href="https://github.com/RoqueRouteiral" class="icon fa-github"><span class="label">Facebook</span></a>
+									<a href="https://es.linkedin.com/in/roque-rodríguez-outeiral-792433125" class="icon fa-linkedin-square"><span class="label">Linkedin</span></a>
+									<a href="https://github.com/RoqueRouteiral" class="icon fa-github"><span class="label">Github</span></a>
 								</li>
 								<li class="icon fa-cogs">
 									<h3>Lidia Talavera</h3>
 									<div class="12u">
 									<span class="image fit"><img src="images/10.jpg" alt=""></span>
 								  </div>
-									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
-									<a href="https://github.com/LidiaTalavera" class="icon fa-github"><span class="label">Facebook</span></a>
+									<a href="https://github.com/LidiaTalavera" class="icon fa-github"><span class="label">Github</span></a>
 								</li>
 								<li class="icon fa-superscript">
 									<h3>Onofre Martorell</h3>
 									<div class="12u">
 									<span class="image fit"><img src="images/6.jpg" alt=""></span>
 								  </div>
-									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
-									<a href="https://github.com/OnofreMartorell" class="icon fa-github"><span class="label">Facebook</span></a>
+									<a href="https://github.com/OnofreMartorell" class="icon fa-github"><span class="label">Github</span></a>
 								</li>
 								<li class="icon fa-magnet">
 									<h3>Idoia Ruiz</h3>
 									<div class="12u">
 									<span class="image fit"><img src="images/1.jpg" alt=""></span>
 									</div>
-									<a href="#" class="icon fa-linkedin-square"><span class="label">Twitter</span></a>
-									<a href="https://github.com/idoiaruiz" class="icon fa-github"><span class="label">Facebook</span></a>
+									<a href="https://www.linkedin.com/in/idoia-ruiz-lopez" class="icon fa-linkedin-square"><span class="label">Linkedin</span></a>
+									<a href="https://github.com/idoiaruiz" class="icon fa-github"><span class="label">Github</span></a>
 								</li>
 							</ul>
 						</div>
