--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<ul class="actions">
 								<li><a href="#" class="button icon special fa-file-pdf-o">Report</a></li>
 								<li><a href="https://github.com/mcv-m4-video/mcv-m4-2017-team5" class="button icon special fa-github">Code</a></li>
-								<li><a href="#" class="button icon special fa-file-powerpoint-o">Slides</a></li>
+								<li><a href="https://docs.google.com/presentation/d/1PY69T1SQVmWrL6SgE17DCD_rw9h6_-dt1y31s_I8-4A/edit?usp=sharing" class="button icon special fa-file-powerpoint-o">Slides</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">See More</a>
